# szlaczki

./: CMakeLists.txt  LICENSE  LICENSE2  README.md  main.cpp  make_exec.sh  pliczek.txt
testowy_cl/: CMakeLists.txt  main.cpp
