#Minimal OpenCL CMakeLists.txt by StreamHPC
cmake_minimum_required (VERSION 3.1)
project(test)
set(CMAKE_CXX_FLAGS "-std=c++0x")
find_package(OpenCL REQUIRED)
include_directories(${OpenCL_INCLUDE_DIRS})
link_directories(${OpenCL_LIBRARY})
add_executable (aaa main.cpp)
target_include_directories (aaa PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries (aaa ${OpenCL_LIBRARY})
